--- a/i/il/ilo/ilovefreethings.com.html
+++ b/i/il/ilo/ilovefreethings.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the ilovefreethings.com privacy policy that was archived on 2013-08-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130820093916id_/http%3A//www.ilovefreethings.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ilovefreethings.com privacy policy that was archived on 2014-02-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140226193642id_/http%3A//www.ilovefreethings.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 
 <title>Privacy Policy - I Love Free Things</title>
 <meta name="author" content="ILFT.com">
-<meta name="copyright" content="Copyright (c) 2013 ILoveFreeThings.com All rights reserved!">
+<meta name="copyright" content="Copyright (c) 2014 ILoveFreeThings.com All rights reserved!">
 <meta content="index,follow" name="robots">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link href="/images/favicon.png" type="image/x-icon" rel="shortcut icon">
@@ -39,9 +39,9 @@
 
    
 
-      <td style="background:url(/images/top_03.gif); background-attachment:scroll; background-position: top right; background-repeat: no-repeat; width:auto;">&nbsp;</td>
+      <td style="background:url(http://images.ilft.com/top_03.gif); background-attachment:scroll; background-position: top right; background-repeat: no-repeat; width:auto;">&nbsp;</td>
 
-      <td colspan="3" width="758" style="background:url(/images/top_04.gif); background-attachment:scroll; background-position: top left; background-repeat: no-repeat; width:auto;" align="right" valign="top">
+      <td colspan="3" width="758" style="background:url(http://images.ilft.com/top_04.gif); background-attachment:scroll; background-position: top left; background-repeat: no-repeat; width:auto;" align="right" valign="top">
 
 
 
@@ -50,16 +50,16 @@
 
 
 <div class="socialtop"><ul>
-<li><a href="http://twitter.com/#!/ILoveFreeThings" target="_blank"><img src="/images/icons/twitter-24x24.png" width="24" height="24" alt="Twitter"></a></li>
-<li><a href="http://www.ilovefreethings.com/rss" title="RSS Feed" target="_blank"><img src="/images/icons/feed-24x24.png" width="24" height="24" alt="Feed"></a></li>
-<li><a href="http://www.facebook.com/ILoveFreeThings" target="_blank"><img src="/images/icons/facebook-24x24.png" width="24" height="24" alt="Facebook"></a></li>
+<li><a href="http://twitter.com/#!/ILoveFreeThings" target="_blank"><img src="http://images.ilft.com/twitter-24x24.png" width="24" height="24" alt="Twitter"></a></li>
+<li><a href="http://www.ilovefreethings.com/rss" title="RSS Feed" target="_blank"><img src="http://images.ilft.com/feed-24x24.png" width="24" height="24" alt="Feed"></a></li>
+<li><a href="http://www.facebook.com/ILoveFreeThings" target="_blank"><img src="http://images.ilft.com/facebook-24x24.png" width="24" height="24" alt="Facebook"></a></li>
 <li><a href="https://plus.google.com/107511433797455669688/?prsrc=3"><img src="https://ssl.gstatic.com/images/icons/gplus-32.png" width="24" height="24" alt="gplus"></a></li>
 </ul>
 </div>
 
 
 
-	  </td><td><img src="/images/top_05.gif" width="26" height="47" alt=""></td>
+	  </td><td><img src="http://images.ilft.com/top_05.gif" width="26" height="47" alt=""></td>
 
       <td></td>
 
@@ -69,17 +69,17 @@
 
 
 
-      <td style="background:url(/images/top_07.gif); background-attachment: scroll; background-position: top right; background-repeat: no-repeat; width:auto;"></td>
+      <td style="background:url(http://images.ilft.com/top_07.gif); background-attachment: scroll; background-position: top right; background-repeat: no-repeat; width:auto;"></td>
 
-      <td width="30"><img src="/images/top_08.gif" width="30" height="171" alt=""></td>
+      <td width="30"><img src="http://images.ilft.com/top_08.gif" width="30" height="171" alt=""></td>
 
-      <td width="431"><img src="/images/top_09.jpg" width="431" height="171" alt="I Love Free Things™"></td>
+      <td width="431"><img src="http://images.ilft.com/top_09.jpg" width="431" height="171" alt="I Love Free Things™"></td>
 
-      <td width="297"><img src="/images/top_10.jpg" width="297" height="171" alt=""></td>
+      <td width="297"><img src="http://images.ilft.com/top_10.jpg" width="297" height="171" alt=""></td>
 
-      <td width="26"><img src="/images/top_11.gif" width="26" height="171" alt=""></td>
+      <td width="26"><img src="http://images.ilft.com/top_11.gif" width="26" height="171" alt=""></td>
 
-      <td style="background:url(/images/top_12.gif); background-attachment: scroll; background-position: top left; background-repeat: no-repeat; width:auto;"></td>
+      <td style="background:url(http://images.ilft.com/top_12.gif); background-attachment: scroll; background-position: top left; background-repeat: no-repeat; width:auto;"></td>
 
     </tr>
 
@@ -89,13 +89,13 @@
 
       <td height="9"></td>
 
-      <td height="9"><img src="/images/top_15.gif" width="30" height="9" alt=""></td>
+      <td height="9"><img src="http://images.ilft.com/top_15.gif" width="30" height="9" alt=""></td>
 
-      <td height="9" colspan="2" style="background:url(/images/top_16.gif); background-repeat: repeat-x;"></td>
+      <td height="9" colspan="2" style="background:url(http://images.ilft.com/top_16.gif); background-repeat: repeat-x;"></td>
 
-      <td height="9"><img src="/images/top_17.gif" width="26" height="9" alt=""></td>
+      <td height="9"><img src="http://images.ilft.com/top_17.gif" width="26" height="9" alt=""></td>
 
-      <td style="background:url(/images/top_18.gif); background-attachment: scroll; background-position: top left; background-repeat: no-repeat; width:auto;"></td>
+      <td style="background:url(http://images.ilft.com/top_18.gif); background-attachment: scroll; background-position: top left; background-repeat: no-repeat; width:auto;"></td>
 
     </tr>
 
@@ -105,13 +105,13 @@
 
       <td>&nbsp;</td>
 
-      <td><img src="/images/top_19.gif" width="30" height="28" alt=""></td>
+      <td><img src="http://images.ilft.com/top_19.gif" width="30" height="28" alt=""></td>
 
-      <td colspan="2" style="background:url(/images/top_20.gif); background-repeat: repeat-x; text-align:left; padding-bottom:3px;color:#FFCC00;">
+      <td colspan="2" style="background:url(http://images.ilft.com/top_20.gif); background-repeat: repeat-x; text-align:left; padding-bottom:3px;color:#FFCC00;">
 	  
 <div id="znavcontainer">
 <ul id="znavlist">
-<li><a href="/"><img src="/images/home.png" width="15" height="12" alt="Home"></a></li>
+<li><a href="/"><img src="http://images.ilft.com/home.png" width="15" height="12" alt="Home"></a></li>
 <li><a href="http://www.ilovefreethings.com/faq" title="Frequently Asked Questions">F.A.Q.</a></li>
 <li><a href="http://www.ilovefreethings.com/subscribe" title="Subscribe">SUBSCRIBE</a></li>
 <li><a href="http://www.ilovefreethings.com/coupons-and-savings-free.html" title="COUPONS">COUPONS</a></li>
@@ -121,10 +121,10 @@
 </ul>
 
 </div>
-<div style="float:right;"><a href="http://www.ilovefreethings.com/free-stuff-canada.html" title="Free Stuff Canada"><img src="/images/icons/canada.png" width="24" height="24" alt="Free Stuff Canada"></a></div>
+<div style="float:right;"><a href="http://www.ilovefreethings.com/free-stuff-canada.html" title="Free Stuff Canada"><img src="http://images.ilft.com/canada.png" width="24" height="24" alt="Free Stuff Canada"></a></div>
 	  </td>
 
-      <td><img src="/images/top_22.gif" width="26" height="28" alt=""></td>
+      <td><img src="http://images.ilft.com/top_22.gif" width="26" height="28" alt=""></td>
 
       <td>&nbsp;</td>
 
@@ -136,11 +136,11 @@
 
       <td></td>
 
-      <td><img src="/images/top_23.gif" width="30" height="12" alt=""></td>
+      <td><img src="http://images.ilft.com/top_23.gif" width="30" height="12" alt=""></td>
 
-      <td colspan="2" style="background:url(/images/top_24.gif); background-repeat: repeat-x;"></td>
+      <td colspan="2" style="background:url(http://images.ilft.com/top_24.gif); background-repeat: repeat-x;"></td>
 
-      <td><img src="/images/top_25.gif" width="26" height="12" alt=""></td>
+      <td><img src="http://images.ilft.com/top_25.gif" width="26" height="12" alt=""></td>
 
       <td></td>
 
@@ -170,7 +170,7 @@
 
   <tbody><tr>
 
-    <td width="10"><img src="/images/spacer.gif" width="10" height="1" alt=""></td>
+    <td width="10"><img src="http://images.ilft.com/spacer.gif" width="10" height="1" alt=""></td>
 
     <td valign="top" width="770" align="left">
 
@@ -178,7 +178,7 @@
 <table width="770" border="0" cellpadding="0" cellspacing="0">
 
       <tbody><tr>
-<td colspan="3"><img src="/images/spacer.gif" width="770" height="1" alt="spacer"></td>
+<td colspan="3"><img src="http://images.ilft.com/spacer.gif" width="770" height="1" alt="spacer"></td>
 </tr>
 <tr>
 
@@ -186,7 +186,7 @@
 
 
 <td class="leftcolumn1" rowspan="2" valign="top">
-	   	<img src="/images/left-top.gif" alt="" width="193" height="33">
+	   	<img src="http://images.ilft.com/left-top.gif" alt="" width="193" height="33">
 
 <div id="leftmenu">
 <ul>
@@ -209,38 +209,43 @@ Clothing <img src="/icons/clothing.gif" alt="Clothing" class="navicon" border="0
 </div>
 <div id="leftside">
 <p>
-<a href="/categories.htm" title="View All Categories"><img src="/images/view-all-cat.gif" width="127" height="14" border="0" alt="View All Categories" style="margin-bottom:20px;"></a>
+<a href="/categories.htm" title="View All Categories"><img src="http://images.ilft.com/view-all-cat.gif" width="127" height="14" border="0" alt="View All Categories" style="margin-bottom:20px;"></a>
 </p>
 
 <p>
-<a href="https://itunes.apple.com/us/app/id576248963?mt=8" target="_blank" title="Available on the App Store"><img src="/images/app_store_badge.png" width="130" height="45" border="0" alt="Available on the App Store"></a>
+<a href="https://itunes.apple.com/us/app/id576248963?mt=8" target="_blank" title="Available on the App Store"><img src="http://images.ilft.com/app_store_badge.png" width="130" height="45" border="0" alt="Available on the App Store"></a>
 </p>
 
 <p>
-<a href="https://play.google.com/store/apps/details?id=com.ilft" target="_blank" title="Get ILFT Android App"><img src="/images/get_it_on_play_logo_small.png" width="129" height="45" border="0" alt="Get ILFT Android App"></a>
+<a href="https://play.google.com/store/apps/details?id=com.ilft" target="_blank" title="Get ILFT Android App"><img src="http://images.ilft.com/get_it_on_play_logo_small.png" width="129" height="45" border="0" alt="Get ILFT Android App"></a>
 </p>
 
 <p>
-<a href="http://www.amazon.com/ILFT-com-I-Love-Free-Things/dp/B004VB4ZIC" target="_blank" title="Get ILFT Android App"><img src="/images/get_it_on_amazon_small.png" width="129" height="45" border="0" alt="Get ILFT Android App"></a>
+<a href="http://www.amazon.com/ILFT-com-I-Love-Free-Things/dp/B004VB4ZIC" target="_blank" title="Get ILFT Android App"><img src="http://images.ilft.com/get_it_on_amazon_small.png" width="129" height="45" border="0" alt="Get ILFT Android App"></a>
 </p>
 <br>
 
 <p>
 <b>As Featured On:</b><br>
-<a href="http://www.youtube.com/watch?v=c9AwxJvAXI4" title="As seen on ABC 13" onclick="javascript: pageTracker._trackPageview('/outgoing/youtube.com/watch?v=c9AwxJvAXI4');" target="_blank"><img src="/images/abc13.png" width="70" height="39" border="0" alt="ABC 13"></a>
+<a href="http://www.youtube.com/watch?v=c9AwxJvAXI4" title="As seen on ABC 13" onclick="javascript: pageTracker._trackPageview('/outgoing/youtube.com/watch?v=c9AwxJvAXI4');" target="_blank"><img src="http://images.ilft.com/abc13.png" width="70" height="39" border="0" alt="ABC 13"></a>
 &nbsp;
-<a href="http://www.youtube.com/watch?v=v-9N56QrsYY" title="As seen on My Fox Colorado" onclick="javascript: pageTracker._trackPageview('/outgoing/http://www.youtube.com/watch?v=v-9N56QrsYY');" target="_blank"><img src="/images/foxcolorado.png" width="70" height="35" border="0" alt="My Fox Colorado"></a>
+<a href="http://www.youtube.com/watch?v=v-9N56QrsYY" title="As seen on My Fox Colorado" onclick="javascript: pageTracker._trackPageview('/outgoing/http://www.youtube.com/watch?v=v-9N56QrsYY');" target="_blank"><img src="http://images.ilft.com/fox-colorado.png" width="70" height="35" border="0" alt="My Fox Colorado"></a>
 </p>
 
 <br><br>
-<a href="http://www.ilovefreethings.com/free-stuff-canada.html" title="Free Stuff Canada"><img src="/images/icons/free-stuff-canada.png" width="130" height="43" border="0" alt="Free Stuff Canada"></a>
+<a href="http://www.ilovefreethings.com/free-stuff-canada.html" title="Free Stuff Canada"><img src="http://images.ilft.com/free-stuff-canada.png" width="130" height="43" border="0" alt="Free Stuff Canada"></a>
+
+
+
+
+<br><br>
 
 </div>
 </td> 
 
 
-<td width="100%" height="33" rowspan="2" valign="top" style="background:url(/images/mid-top.gif); background-color:#FFF; background-repeat: repeat-x; background-position: top; padding-top:5px;">
-<img src="/images/spacer.gif" width="555" height="1" alt="spacer">
+<td width="100%" height="33" rowspan="2" valign="top" style="background:url(http://images.ilft.com/mid-top.gif); background-color:#FFF; background-repeat: repeat-x; background-position: top; padding-top:5px;">
+<img src="http://images.ilft.com/spacer.gif" width="555" height="1" alt="spacer">
 
 
 
@@ -250,7 +255,7 @@ Clothing <img src="/icons/clothing.gif" alt="Clothing" class="navicon" border="0
 	  <tbody><tr>
 
 		<td valign="top" style="width:395px;">
-<img src="/images/spacer.gif" width="395" height="1" alt="spacer">
+<img src="http://images.ilft.com/spacer.gif" width="395" height="1" alt="spacer">
 
 
 
@@ -344,37 +349,37 @@ Clothing <img src="/icons/clothing.gif" alt="Clothing" class="navicon" border="0
 
 
 </td>
-        <td width="56" height="18" valign="top" style="background:url(/images/c-right-bg.gif); background-repeat: repeat-y;"><img src="/images/c-top-right.gif" width="23" height="18" alt=""></td>
+        <td width="56" height="18" valign="top" style="background:url(http://images.ilft.com/c-right-bg.gif); background-repeat: repeat-y;"><img src="http://images.ilft.com/c-top-right.gif" width="23" height="18" alt=""></td>
       </tr>
       <tr>
 
-        <td valign="bottom" style="background:url(/images/c-right-bg.gif); background-repeat: repeat-y;"><img src="/images/klyaksa-1.gif" width="23" height="58" alt=""></td>
+        <td valign="bottom" style="background:url(http://images.ilft.com/c-right-bg.gif); background-repeat: repeat-y;"><img src="/images/klyaksa-1.gif" width="23" height="58" alt=""></td>
       </tr>
       <tr>
-        <td valign="top"><img src="/images/left_bottom.gif" width="193" height="28" alt=""></td>
-        <td align="right" valign="top" style="background:url(/images/mid_bottom.gif); background-repeat: repeat-x;"><table width="100%" border="0" cellspacing="0" cellpadding="0">
+        <td valign="top"><img src="http://images.ilft.com/left_bottom.gif" width="193" height="28" alt=""></td>
+        <td align="right" valign="top" style="background:url(http://images.ilft.com/mid_bottom.gif); background-repeat: repeat-x;"><table width="100%" border="0" cellspacing="0" cellpadding="0">
           <tbody><tr>
             <td style="color: #C6E2FF;" align="center">
 
 
 <span style="font-size:11px; font-family:Verdana;">
-		 © 2013 I Love Free Things™
+		 © 2014 I Love Free Things™
 			</span>
 
 
 
 
 			</td>
-            <td width="26"><img src="/images/klyaksa-0.gif" width="26" height="37" alt=""></td>
+            <td width="26"><img src="http://images.ilft.com/klyaksa-0.gif" width="26" height="37" alt=""></td>
           </tr>
         </tbody></table></td>
-        <td valign="top"><img src="/images/klyaksa-2.gif" width="23" height="37" alt=""></td>
+        <td valign="top"><img src="http://images.ilft.com/klyaksa-2.gif" width="23" height="37" alt=""></td>
       </tr>
     </tbody></table></td>
 
 
 
-<td valign="bottom" style="background:url(/images/klyaksa-0a.gif); background-attachment: scroll; background-position: bottom left; background-repeat: no-repeat;" width="50%"><img src="/images/spacer.gif" width="1" height="1" border="0" alt="&nbsp;"></td>
+<td valign="bottom" style="background:url(http://images.ilft.com/klyaksa-0a.gif); background-attachment: scroll; background-position: bottom left; background-repeat: no-repeat;" width="50%"><img src="http://images.ilft.com/spacer.gif" width="1" height="1" border="0" alt="&nbsp;"></td>
   </tr>
 </tbody></table>
 
@@ -410,6 +415,6 @@ Clothing <img src="/icons/clothing.gif" alt="Clothing" class="navicon" border="0
 
 
 
-<noscript><link rel="stylesheet" href="/css/buttons.css"></noscript>
+<link rel="stylesheet" href="/css/buttons.css">
 
 </body></html>
