--- a/b/bu/bus/buscaid.com.html
+++ b/b/bu/bus/buscaid.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the buscaid.com privacy policy that was archived on 2013-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131206014707id_/http%3A//www.buscaid.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the buscaid.com privacy policy that was archived on 2014-02-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140226194545id_/http%3A//www.buscaid.com/pages/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="utf-8">
@@ -7,7 +7,7 @@
 <meta name="keywords" content="privacy policy">
 <meta name="description" content="Privacy policy.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="iconfinder.css">
+<link rel="stylesheet" href="http://www.buscaid.com/iconfinder.css">
 </head>
 <body id="" data-application="" data-view="">
 <a name="#top"></a>
@@ -113,9 +113,9 @@
 <div id="homepage-footer">
 <div id="submenu" class="footer">
 <div class="links">
-<a href="/about">About us</a>
-<a href="/termsofservice">Terms of service</a>
-<a href="/privacypolicy">Privacy policy</a>
+<a href="http://www.buscaid.com/pages/about">About us</a>
+<a href="http://www.buscaid.com/pages/termsofservice">Terms of service</a>
+<a href="http://www.buscaid.com/pages/privacypolicy">Privacy policy</a>
 </div>
 <div class="proudlymadebyus">
 Proudly made in Germany☺ ˆ Copyright 2013© ˆ All rights reserved®
