--- a/e/ey/eye/eyewonder.com.html
+++ b/e/ey/eye/eyewonder.com.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the eyewonder.com privacy policy that was archived on 2013-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131231202009id_/http%3A//www.mediamind.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eyewonder.com privacy policy that was archived on 2014-02-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140226195935id_/http%3A//www.mediamind.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>Privacy Policy | MediaMind</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link rel="shortcut icon" href="/misc/favicon.ico" type="image/x-icon">
-  <link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_a93b80fdf40a0f0f820f1001b2ccfbc4.css">
-  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sites/default/files/js/js_66b8785aacfa175db6d09e079f5bb3fc.js"></script>
+  <link type="text/css" rel="stylesheet" media="all" href="/sites/default/files/css/css_c72bf25716e04293961034796aad47ae.css">
+  <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/sites/default/files/js/js_69ebbb801e2c40a55c3ee82575fa7f42.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip" }, "block_edit": { "hover_links": 1 }, "jcarousel": { "ajaxPath": "/jcarousel/ajax/views", "carousels": { "jcarousel-dom-1": { "view_options": { "view_args": "", "view_path": "node/7077", "view_base_path": null, "view_display_id": "block_1", "view_name": "homepage_youtube", "jcarousel_dom_id": 1 }, "skin": "default", "visible": 6, "autoPause": 1, "start": 1, "ajax": true, "scroll": 6, "size": 94, "selector": ".jcarousel-dom-1" } } }, "lightbox2": { "rtl": 0, "file_path": "/(\\w\\w/)sites/default/files", "default_image": "/sites/all/modules/lightbox2/images/brokenimage.jpg", "border_size": 10, "font_color": "000", "box_color": "fff", "top_position": "", "overlay_opacity": "0.8", "overlay_color": "000", "disable_close_click": true, "resize_sequence": 0, "resize_speed": 400, "fade_in_speed": 400, "slide_down_speed": 600, "use_alt_layout": false, "disable_resize": false, "disable_zoom": false, "force_show_nav": false, "show_caption": true, "loop_items": false, "node_link_text": "View Image Details", "node_link_target": false, "image_count": "Image !current of !total", "video_count": "Video !current of !total", "page_count": "Page !current of !total", "lite_press_x_close": "press \x3ca href=\"#\" onclick=\"hideLightbox(); return FALSE;\"\x3e\x3ckbd\x3ex\x3c/kbd\x3e\x3c/a\x3e to close", "download_link_text": "", "enable_login": false, "enable_contact": false, "keys_close": "c x 27", "keys_previous": "p 37", "keys_next": "n 39", "keys_zoom": "z", "keys_play_pause": "32", "display_image_size": "original", "image_node_sizes": "()", "trigger_lightbox_classes": "", "trigger_lightbox_group_classes": "", "trigger_slideshow_classes": "", "trigger_lightframe_classes": "", "trigger_lightframe_group_classes": "", "custom_class_handler": 0, "custom_trigger_classes": "", "disable_for_gallery_lists": true, "disable_for_acidfree_gallery_lists": true, "enable_acidfree_videos": true, "slideshow_interval": 5000, "slideshow_automatic_start": true, "slideshow_automatic_exit": true, "show_play_pause": true, "pause_on_next_click": false, "pause_on_previous_click": true, "loop_slides": false, "iframe_width": 600, "iframe_height": 600, "iframe_border": 1, "enable_video": false }, "cron": { "basePath": "/poormanscron", "runNext": 1355842603 }, "custom_search": { "form_target": "_self", "solr": 0 }, "views": { "ajax_path": "/views/ajax", "ajaxViews": [ { "view_name": "homepage_event", "view_display_id": "block_1", "view_args": "", "view_path": "node/7077", "view_base_path": null, "view_dom_id": 2, "pager_element": 0 } ] } });
@@ -63,7 +63,7 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
 </div>
 <fieldset class="custom_search-popup"></fieldset>
 <input type="hidden" name="delta" id="edit-delta" value="1">
-<input type="hidden" name="form_build_id" id="form-720c36427b6948b1bc288658bd7ddd32" value="form-720c36427b6948b1bc288658bd7ddd32">
+<input type="hidden" name="form_build_id" id="form-dbadbc90de611fdcc4b4ba9bbc954582" value="form-dbadbc90de611fdcc4b4ba9bbc954582">
 <input type="hidden" name="form_id" id="edit-custom-search-blocks-form-1" value="custom_search_blocks_form_1">
 <input type="hidden" name="default_text" id="edit-default-text" value="search" class="default-text">
 <input type="hidden" name="custom_search_paths" id="edit-custom-search-paths" value="http://www.mediamind.com/search/node/[key]">
@@ -189,7 +189,7 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
   </div>
 <script type="text/javascript">
 	$(document).ready(function() {
-		var country_code = "BR";	
+		var country_code = "EU";	
 		$('#edit-submitted-country').val(country_code);
 		
 		//$('.ui-dialog.ui-widget.ui-widget-content.ui-corner-all.modalframe',window.parent.document).css('top','70px').css('height','780px');
@@ -236,7 +236,7 @@ html .jqueryslidemenu{height: 1%;} /*Holly Hack for IE7 and below*/
 			remove_year();// DO IT ALSO ON WHEN THE AJAX Call TO FILTER THE PRESS RELEASE FINISHES
 		});
 		$('#myslidemenu ul ul ul').remove(); // remove third level on top menu
-		var country_code = "BR";	
+		var country_code = "EU";	
 		$('#edit-submitted-country').val(country_code);
 		$('#edit-attach-cv').attr('size','32');
 		/*$(".block-local_menu a:contains('contact us')").live('click',function() {
