--- a/i/in/ind/indian-sex-club.com.html
+++ b/i/in/ind/indian-sex-club.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the indian-sex-club.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216153533id_/http%3A//tour.privateindianporno.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the indian-sex-club.com privacy policy that was archived on 2014-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140227013451id_/http%3A//www.loungesupport.com/docks/privacypolicy.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+
 <title>Privacy Policy</title>
 <style type="text/css">
 <!--
@@ -10,19 +10,28 @@
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 }
+body p {
+	font-family: Arial, Helvetica, sans-serif;
+}
+body p {
+	font-size: 12px;
+}
+.top {
+	font-family: Arial, Helvetica, sans-serif;
+}
 -->
 </style>
 </head>
 
 <body>
-<table width="600" border="0" cellspacing="3" cellpadding="3">
+<table width="900" border="0" align="center" cellpadding="3" cellspacing="3">
   <tbody><tr>
-    <td><h1 class="style1">OUR WEB SITE PRIVACY POLICY</h1>
+    <td><h1 class="style1"></h1><h1 align="center" class="top">OUR WEB SITE PRIVACY POLICY</h1>
       <p class="style1">We have created this Privacy Policy in order to demonstrate our firm   commitment to privacy. This Privacy Policy explains our practices with respect   to the collection, use, and disclosure of personal and non-personal information   provided by visitors to our Web site. By using this site, you signify your   assent to these our privacy practices and the terms and conditions of our Web   site.</p>
       <p class="style1">If this policy is not agreeable to you, please do not use this site.</p>
       <p class="style1"><strong>WHAT TYPE INFORMATION IS COLLECTED?</strong></p>
       <p class="style1">Personal Information:</p>
-      <p class="style1">We only collect personal information from visitors to our Web site when they   voluntarily provide it to us by completing our registration form or electing to   use one of our services. We may require visitors to provide us with information   including, but not limited to, their name, physical address, email address,   birth date, credit card number, credit card expiration date, username, password,   and on occasion a unique identifier (such as their mother’s maiden name).</p>
+      <p class="style1">We only collect personal information from visitors to our Web site when they   voluntarily provide it to us by completing our registration form or electing to   use one of our services. </p>
       <p class="style1">Non-Personal Information</p>
       <p class="style1">When visitors access our Web site, certain non-personal information may be   collected from them including, but not limited to, their browser type (e.g.,   Netscape or Internet Explorer), operating system (e.g., Windows or Macintosh),   IP address, and the domain name from which they accessed the site (e.g.,   lycos.com). In addition, we may collect information about visitors' browsing   behavior, such as the date and time they visit the Web site, the areas or pages   of our Web site that they visit, the amount of time spent viewing the site, the   number of times the visitor returns to the site, and click-stream data. We use   transparent tracking pixels to determine the number of Web site visitors that   have been sent to us through our affiliate network. We do not track any   information about visitors once they leave our site. We may use cookies (small   text files that are stored on visitors computers when they access our Web site)   to collect this information. Information collected through cookies may be   combined with visitors' personal information. We may also allow unaffiliated   third parties, such as advertisers, to serve cookies to visitors of our Web   site. Visitors are always free to decline cookies, but in doing so they may not   be able to use certain features on our Web site. The "help" segment of the   toolbar on most browsers explains how to configure a browser to not accept new   cookies, how to have the browser inform a user when they receive a new cookie,   and how to erase cookies from their hard drives.</p>
       <p class="style1"><strong>IN WHAT WAY DO WE USE YOUR PERSONAL AND NON-PERSONAL   INFORMATION?</strong></p>
@@ -31,7 +40,6 @@
       <p class="style1">We may transfer or disclose information collected from visitors to our Web   site to our employees and independent contractors, to our parent company,   subsidiaries and affiliates, and to our consultants, other business associates,   and suppliers, if the disclosure will enable that party to perform a business,   professional, or technical support function for us, or if required to do so by   law. We may also disclose information we collect from our site visitors to our   marketing and business partners, who may use the information in connection with   their business operations, such as to send marketing and other communications to   visitors of our site.<br>
   We may also share, rent, sell, or transfer any personal   information (including financial information) provided by our visitors to third   parties. During the registration process, and at certain times during any member   user session, we may present additional offers from third party service   providers. Our third party service providers have their own terms and conditions   and privacy policies. We suggest that visitors access these third party sites   and review their terms and conditions and privacy policies before "subscribing"   to any third party offer. If a visitor subscribes to a third party offer during   our registration process, we will transfer the financial data they provided to   us as part of the registration process to that third party company, which will   then process the transaction using that financial data. We may also share   non-personal information we collect from visitors to our site, such as their   browsing behaviors, with third parties. For example, we may tell a third party   advertiser that a certain number of people have visited a certain area on our   Web site.</p>
       <p class="style1"><strong>WHAT SECURITY MEASURES DO WE TAKE TO PROTECT YOUR DATA?</strong></p>
-      <p class="style1">To help prevent unauthorized access, maintain data integrity, and ensure the   appropriate use of information, we have put in place certain physical,   electronic, and managerial procedures to safeguard and secure the information we   collect from visitors to our Web site. We use SSL (Secure Socket Layer)   technology to protect any credit card information you provide us. We allow   access to personal information only to persons and entities engaging in   activities provided for by this Privacy Policy. Visitors should consider any   communication that they transmit to us (such as data, questions or answers,   comments, suggestions, or communications submitted to a chat room) to be   non-confidential. We will not be liable or responsible if information that   belongs to a visitor is intercepted and used by an unintended recipient.</p>
       <p class="style1"><strong>WE PROTECT CHILDREN'S PRIVACY</strong></p>
       <p class="style1">Protecting the privacy of children is VERY important to us. For that reason   we do not structure any part of our site to attract anyone under the age of 18   (21 in some areas) and we do not allow anyone under the age of 18 (21 in some   areas) to register and become a member of our site.</p>
       <p class="style1"><strong>CORPORATE CHANGES</strong></p>
@@ -41,11 +49,11 @@
       <p class="style1"><strong>CHANGES TO THIS PRIVACY POLICY</strong></p>
       <p class="style1">There may be times when we need to change the terms of this Privacy Policy.   To ensure that you are aware of our current privacy practices, please bookmark   this page and check back often.</p>
       <p class="style1"><strong>HOW TO CANCEL YOUR SUBSCRIPTION</strong></p>
-      <p class="style1">You can cancel your subscription online <a href="http://support.members-lounge.com/index.php?section=29">here </a></p>
+      <p class="style1">You can cancel your subscription online <a href="http://www.loungesupport.com">here </a></p>
       <p class="style1"><strong>HOW CAN YOU ACCESS THE INFORMATION WE HAVE COLLECTED FROM   YOU?</strong></p>
       <p class="style1">Visitors who wish to access or change the information they provided to our   Web site, should visit the Customer Service section of this site and contact us   via Email.</p>
       <p class="style1"><strong>HOW CAN YOU CONTACT THE WEB SITE OPERATOR?</strong></p>
-      <p class="style1">Visitors who have any questions about this Privacy Policy, the practices of   this site, or their interactions with this Web site, should visit the Customer   Service. <a href="http://support.members-lounge.com/mailpro.php?config.txt;currentPage=1">You can contact customer   support here </a></p>      
+      <p class="style1">Visitors who have any questions about this Privacy Policy, the practices of   this site, or their interactions with this Web site, should visit the Customer   Service. <a href="http://www.loungesupport.com">You can contact customer   support here </a></p>
     <h1 class="style1">&nbsp;</h1>    </td>
   </tr>
 </tbody></table>
