--- a/d/di/dir/directsattv.com.html
+++ b/d/di/dir/directsattv.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the directsattv.com privacy policy that was archived on 2013-08-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130806182852id_/http%3A//www.directsattv.com/directv/privacylegal.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the directsattv.com privacy policy that was archived on 2014-02-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140227075418id_/http%3A//www.directsattv.com/directv/privacylegal.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="ctl00_head1">
 <script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script type="text/javascript">var _sf_startpt=(new Date()).getTime()</script>
 <title>
 	Direct TV Phone Number, 888-357-3163 - DIRECT SAT TV
-</title><meta id="ctl00_uxKeywords" name="keywords" content="Direct TV Phone Number"><meta id="ctl00_uxDescription" name="description" content="Call this Direct TV Phone Number to get the best deals in DIRECTV - 888-357-3163. Direct Sat TV protects your privacy when you call for special phone offers. Call this Direct TV Phone Number Now."><meta id="ctl00_uxRobots" name="ROBOTS" content="NOINDEX,NOFOLLOW" value="NOINDEX,NOFOLLOW"><meta name="google-site-verification" content="UYMZ30ZoyXgSNwfHMNwQERpV38lHysq1oHDnLtHd4es"><link id="ctl00_uxStyle" rel="stylesheet" type="text/css" href="/css/style.css"><link href="https://plus.google.com/106505101876784873834" rel="publisher">
+</title><meta id="ctl00_uxKeywords" name="keywords" content="Direct TV Phone Number"><meta id="ctl00_uxDescription" name="description" content="Call this Direct TV Phone Number to get the best deals in DIRECTV - 888-357-3163. Direct Sat TV protects your privacy when you call for special phone offers. Call this Direct TV Phone Number Now."><meta name="verify-v1" content="VJeZH2aBU4LjGoOftVsSxbWZ1ZjTYNyWgLIEtIPEScg="><meta id="ctl00_uxRobots" name="ROBOTS" content="NOINDEX,NOFOLLOW" value="NOINDEX,NOFOLLOW"><link id="ctl00_uxStyle" rel="stylesheet" type="text/css" href="/css/style.css"><link href="https://plus.google.com/106505101876784873834" rel="publisher">
 <script type="text/javascript" language="javascript" src="/js/util.js"></script>
 <script type="text/javascript" language="javascript" src="/js/hintbox.js"></script>
 <script type="text/javascript" src="/js/jquery-1.4.2.min.js"></script>
@@ -158,7 +158,7 @@ __VIEWSTATE" value="">
 <!-- MAIN 3 COLUMN CONTAINER -->
   <div id="container">
 <!-- RED BANNER -->
-    <div align="center"><div style="background: url('/dstimages/DST-Offer-RedBanner.png') no-repeat;width:940px;height:125px;" align="center">
+    <div align="center"><div style="background: url('/dstimages/DST-Offer-RedBanner.jpg') no-repeat;width:940px;height:125px;" align="center">
 <!-- COUNTDOWN CLOCK COMMENTED OUT PER ZACH
   <div id="the_hour" style="width:798px;text-align:right;float:left;padding-top:55px;font-family:courier;color:#ff8200;font-weight:bold;font-size:38px;letter-spacing:1x;"></div>
   <div id="the_mins" style="width:102px;padding-left:15px;float:right;text-align:left;padding-top:55px;font-family:courier;color:#ff8200;font-weight:bold;font-size:38px;letter-spacing:1px;"></div><br />
@@ -479,7 +479,7 @@ document.write(year)
   var default_number="8884277125";
   var custom1=getURLVar("affinitycode");
   //var custom2=document.referrer;
-  var custom2='http://www.directsattv.com/';
+  var custom2='http://www.directsattv.com/directv/hd_channels.html';
 
 function probeURL ()
 {
@@ -529,6 +529,8 @@ var _sf_async_config={uid:16367,domain:"directsattv.com"};
   
   <!-- Tracking script for Next Jump -->
   
+
+
   
   
 
